# go-fish

./: .gitignore  CMakeLists.txt  GoFish.sln  Makefile  main.cpp
DataModel/: Card.h  DataModel.h  DataModelManager.cpp  DataModelManager.h  Player.h  Set.h
Enums/: CardValue.h  DMPropertyType.h  GameState.h  MatchType.h  Suite.h
EventController/: EventController.cpp  StateEvent.h  StateHistory.h
GoFish/: DataModel.h  DataModelManager.cpp  DataModelManager.h  EventController.cpp  EventController.h  FeatureFactory.cpp  FeatureFactory.h  GoFish.vcxproj  GoFish.vcxproj.filters  IActions.h  IFeature.h  Observor.h  Player.h  Set.h  StateController.h  StateEvent.h  StateHistory.h  main.cpp
GoFish/DataModel/: Card.h  DataModel.h  Player.h
GoFish/EventController/: EventController.cpp  EventController.h  StateEvent.h  StateHistory.h  StateInfo.h
GoFish/Interfaces/: IActions.h  IFeature.h
GoFish/UI/: FeatureFactory.h  UIController.cpp  UIController.h
Interfaces/: IActions.h  IEvents.h  IStateHistory.h  IUIFeature.h  Observer.h  Observor.h  StateInfo.h
UI/: FeatureFactory.h  UIController.cpp  UIController.h
src/: CMakeLists.txt
src/DataModel/: Card.h  DataModelManager.cpp  Set.h
src/Enums/: CardValue.h  DMPropertyType.h  GameState.h  MatchType.h  Suite.h
src/EventController/: EventController.h
src/UI/: FeatureFactory.h
test/: CMakeLists.txt  test.cpp
